# ipc

./: .gitignore  messagequeue.cpp  messagequeue.h  sharedmemory.hpp  shmcontainer.h  shmlock.h
messages/: CMakeLists.txt  package.xml
messages/config/: config.pbtxt
messages/examples/: test.cpp  test_passive.cpp  test_proactive.cpp  test_publisher.cpp  test_subscriber.cpp
messages/proto/: messages_protos.proto
messages/protos/: config.proto  envelope.proto
messages/src/: messages_node.h  passiveside.cpp  passiveside.h  proactiveside.h  publisher.cpp  publisher.h  scheduler.cpp  scheduler.h  sendassist.h  streambuffer.hpp  subscribelist.cpp  subscribelist.h  subscriber.cpp  subscriber.h  utils.hpp
messages/src/utils/: util_ini.h  util_system.h  util_threadpool.h  util_time.h
messages/src/zmq/: messages_interface.h
messages/src/zmqcopy/: buffer.hpp  messageimpl.cpp  messageimpl.h  messageimplement.cpp  messageimplement.h  messageinterface.cpp  messageinterface.h  passiveside.cpp  passiveside.h  proactiveside.cpp  proactiveside.h  scheduler.cpp  scheduler.h  sendassist.cpp  sendassist.h  sendassist.hpp  stringbuffer.hpp  utils.hpp  zmq_config.h
middleware/: CMakeLists.txt  server_node.cpp
middleware/examples/: ipc_debugger.cpp
middleware/proto/: messages_protos.proto
middleware/src/: messages_factory.cpp  messages_factory.h  messages_node.h
middleware/src/utils/: util_classloader.h  util_debug.cpp  util_debug.h  util_serializer.h  util_string.cpp  util_string.h  util_system.cpp  util_system.h  util_threadpool.h  util_time.cpp  util_utils.cpp  util_utils.h
middleware/src/zmq/: messages_callback.h  messages_client.cpp  messages_client.h  messages_interface.cpp  messages_interface.h  messages_routing.cpp  messages_routing.h  zmq_config.h  zmq_context.h  zmq_envelope.cpp  zmq_envelope.h
middleware/src/zmqcopy/: messageimplement.cpp  messageimplement.h  routinginterface.cpp  routinginterface.h  zmqforward.cpp  zmqforward.h
mq/: CMakeLists.txt  server_node.cpp
mq/examples/: ipc_debugger.cpp
mq/src/: messages_factory.cpp
mq/src/utils/: util_classloader.h  util_debug.cpp  util_defines.h  util_ini.cpp  util_ini.h  util_string.cpp  util_string.h  util_system.cpp  util_threadpool.h  util_time.h
mq/src/zmq/: messages_client.cpp  messages_client.h  messages_interface.cpp  messages_interface.h  messages_routing.cpp  zmq_context.h  zmq_envelope.cpp  zmq_envelope.h
msgqueue/: CMakeLists.txt
msgqueue/examples/: ipc_debugger.cpp
msgqueue/src/utils/: util_ini.cpp  util_utils.h
msgqueue/src/zmq/: messages_routing.h
net/: CMakeLists.txt  README.md  application.cpp  application.h  connection.cpp  connection.h  connectionmgr.cpp  connectionmgr.h  connectionpool.cpp  connectionpool.h  heartbeat.cpp  heartbeat.h  httpclient.cpp  httpclient.h  httpserver.cpp  httpserver.h  logdefine.h  md5.hpp  package.cpp  package.h  rpcclient.cpp  rpcclient.h  sockethandler.hpp  socketsettings.hpp  tcpclient.cpp  tcpclient.h  tcphandler.cpp  tcphandler.h  tcpserver.cpp  tcpserver.h  tcpsocket.hpp  tcpsocketsettings.hpp  udpclient.cpp  udpclient.h  udphandler.cpp  udphandler.h
net/examples/: example.cpp  testhttp.cpp  testtcp.cpp
shm/: CMakeLists.txt  asyncmessagequeue.cpp  asyncmessagequeue.h  messagequeue.cpp  messagequeue.h  sharedmemory.hpp  shmcontainer.h  shmlock.h  shmmanaged.h
